fix: swagger configuration
