# api/swagger.json
@@ -56,7 +56,7 @@
                 "summary": "Find user by id",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "User id",
                         "name": "id",
                         "in": "path",
@@ -64,12 +64,6 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "User Found successfully",
-                        "schema": {
-                            "$ref": "#/definitions/response.UserResponseDto"
-                        }
-                    },
                     "404": {
                         "description": "User not found",
                         "schema": {
